# agmh

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  MAINTAINERS.md  MANIFEST.in  README.md  RELEASING.md  SECURITY.md  SUPPORT.md  config.example.toml  pyproject.toml  release-please-config.json  sources.example.txt
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  (+1 more)
docs/: AGMH_GUIDE.md
examples/: 01-visitor-discover-github-hackerschoice.md  02-extencil-discover-own-github-profile.md  03-extencil-local-mirror-haltman-github-org.md  04-skyperthc-github-to-codeberg-hackerschoice-mirror.md  05-extencil-discover-haltman-github-org.md  06-jiab77-watch-hackerschoice-download.md  07-extencil-download-hackerschoice-github.md  08-extencil-download-hackerschoice-telegram-finish.md  09-visitor-watch-extencil-discord-all-events.md  10-jiab77-watch-own-github-mirror-to-gitlab-codeberg-sourcehut.md  11-skyperthc-discover-vanhauser-thc-github.md  12-skyperthc-watch-two-github-sources-to-gitlab.md  13-skyperthc-watch-phrackzine-download-telegram.md  14-public-gitlab-group-download.md  15-gitlab-group-to-github-private-mirror.md  16-codeberg-public-discover-and-download.md  17-bitbucket-workspace-download.md  18-two-step-local-mirror-then-remote-mirror.md  19-discord-thread-notifications.md  20-dry-run-and-state-audit.md  21-generic-git-vps-destination.md  22-extencil-github-to-irchaos-forgejo-mirror.md  EXAMPLE_TEMPLATE.md  README.md  shared-token-and-webhook-reference.md
tests/: test_config_and_utils.py
(+26 files in other folders)
